--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林), server: 213.183.53.214, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇨🇳 中国-4.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-501.7KB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 波兰-801.1KB/s(Youtube:不良林), server: 217.30.10.66, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林), server: 213.183.53.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇺🇸 美国-834.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 捷克-652.4KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
   - {name: 🇨🇳 台湾-1.24MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇳🇱 荷兰-1.17MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 捷克-652.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 捷克-652.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 捷克-652.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 捷克-652.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 捷克-652.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 捷克-652.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-501.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
+      - 捷克-652.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
