--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林), server: 213.183.53.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇺🇸 美国-834.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 捷克-652.4KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 波兰-801.1KB/s(Youtube:不良林), server: 217.30.10.66, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 波兰-162.4KB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
   - {name: 🇨🇳 台湾-1.24MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇳🇱 荷兰-1.17MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 波兰-679.0KB/s(Youtube:不良林), server: 217.30.10.63, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 波兰-786.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 波兰-479.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 波兰-441.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 波兰-1.28MB/s(Youtube:不良林), server: 217.30.10.63, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
-      - 捷克-652.4KB/s(Youtube:不良林)
+      - 波兰-801.1KB/s(Youtube:不良林)
+      - 波兰-162.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 波兰-679.0KB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
+      - 波兰-441.2KB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
-      - 捷克-652.4KB/s(Youtube:不良林)
+      - 波兰-801.1KB/s(Youtube:不良林)
+      - 波兰-162.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 波兰-679.0KB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
+      - 波兰-441.2KB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
-      - 捷克-652.4KB/s(Youtube:不良林)
+      - 波兰-801.1KB/s(Youtube:不良林)
+      - 波兰-162.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 波兰-679.0KB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
+      - 波兰-441.2KB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
-      - 捷克-652.4KB/s(Youtube:不良林)
+      - 波兰-801.1KB/s(Youtube:不良林)
+      - 波兰-162.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 波兰-679.0KB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
+      - 波兰-441.2KB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
-      - 捷克-652.4KB/s(Youtube:不良林)
+      - 波兰-801.1KB/s(Youtube:不良林)
+      - 波兰-162.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 波兰-679.0KB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
+      - 波兰-441.2KB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
-      - 捷克-652.4KB/s(Youtube:不良林)
+      - 波兰-801.1KB/s(Youtube:不良林)
+      - 波兰-162.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 波兰-679.0KB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
+      - 波兰-441.2KB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-834.8KB/s(Youtube:不良林)
-      - 捷克-652.4KB/s(Youtube:不良林)
+      - 波兰-801.1KB/s(Youtube:不良林)
+      - 波兰-162.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 波兰-679.0KB/s(Youtube:不良林)
+      - 波兰-786.2KB/s(Youtube:不良林)
+      - 波兰-479.4KB/s(Youtube:不良林)
+      - 波兰-441.2KB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
