--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-801.1KB/s(Youtube:不良林), server: 217.30.10.66, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-162.4KB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇨🇳 台湾-1.24MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
-  - {name: 波兰-679.0KB/s(Youtube:不良林), server: 217.30.10.63, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 波兰-786.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-479.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-441.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-2.07MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 波兰-889.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇳🇱 荷兰-607.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
   - {name: 波兰-1.28MB/s(Youtube:不良林), server: 217.30.10.63, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 波兰-354.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 波兰-702.3KB/s(Youtube:不良林), server: 217.30.10.63, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 波兰-875.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林), server: 213.183.53.200, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
-      - 波兰-162.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 波兰-679.0KB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-441.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
+      - 波兰-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
       - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-354.6KB/s(Youtube:不良林)
+      - 波兰-702.3KB/s(Youtube:不良林)
+      - 波兰-875.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
-      - 波兰-162.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 波兰-679.0KB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-441.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
+      - 波兰-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
       - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-354.6KB/s(Youtube:不良林)
+      - 波兰-702.3KB/s(Youtube:不良林)
+      - 波兰-875.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
-      - 波兰-162.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 波兰-679.0KB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-441.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
+      - 波兰-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
       - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-354.6KB/s(Youtube:不良林)
+      - 波兰-702.3KB/s(Youtube:不良林)
+      - 波兰-875.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
-      - 波兰-162.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 波兰-679.0KB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-441.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
+      - 波兰-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
       - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-354.6KB/s(Youtube:不良林)
+      - 波兰-702.3KB/s(Youtube:不良林)
+      - 波兰-875.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
-      - 波兰-162.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 波兰-679.0KB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-441.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
+      - 波兰-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
       - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-354.6KB/s(Youtube:不良林)
+      - 波兰-702.3KB/s(Youtube:不良林)
+      - 波兰-875.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
-      - 波兰-162.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 波兰-679.0KB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-441.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
+      - 波兰-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
       - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-354.6KB/s(Youtube:不良林)
+      - 波兰-702.3KB/s(Youtube:不良林)
+      - 波兰-875.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 波兰-801.1KB/s(Youtube:不良林)
-      - 波兰-162.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.24MB/s(Youtube:不良林)
-      - 波兰-679.0KB/s(Youtube:不良林)
-      - 波兰-786.2KB/s(Youtube:不良林)
-      - 波兰-479.4KB/s(Youtube:不良林)
-      - 波兰-441.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
+      - 波兰-889.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
       - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-354.6KB/s(Youtube:不良林)
+      - 波兰-702.3KB/s(Youtube:不良林)
+      - 波兰-875.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
