--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-2.07MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 波兰-889.1KB/s(Youtube:不良林), server: 217.30.10.67, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇳🇱 荷兰-607.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 波兰-1.28MB/s(Youtube:不良林), server: 217.30.10.63, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇨🇳 中国-463.4KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇳🇱 荷兰-1.57MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇺🇸 美国-251.1KB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇨🇳 中国-5.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 波兰-354.6KB/s(Youtube:不良林), server: 217.30.10.63, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
   - {name: 波兰-702.3KB/s(Youtube:不良林), server: 217.30.10.63, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
   - {name: 波兰-875.2KB/s(Youtube:不良林), server: 217.30.10.63, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
-      - 波兰-889.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
-      - 波兰-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
       - 波兰-354.6KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
       - 波兰-875.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
-      - 波兰-889.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
-      - 波兰-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
       - 波兰-354.6KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
       - 波兰-875.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
-      - 波兰-889.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
-      - 波兰-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
       - 波兰-354.6KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
       - 波兰-875.2KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
-      - 波兰-889.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
-      - 波兰-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
       - 波兰-354.6KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
       - 波兰-875.2KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
-      - 波兰-889.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
-      - 波兰-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
       - 波兰-354.6KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
       - 波兰-875.2KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
-      - 波兰-889.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
-      - 波兰-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
       - 波兰-354.6KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
       - 波兰-875.2KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-2.07MB/s(Youtube:不良林)
-      - 波兰-889.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-607.3KB/s(Youtube:不良林)
-      - 波兰-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-251.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.01MB/s(Youtube:不良林)
       - 波兰-354.6KB/s(Youtube:不良林)
       - 波兰-702.3KB/s(Youtube:不良林)
       - 波兰-875.2KB/s(Youtube:不良林)
